--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3'
 services:
   apache:
     image: httpd:latest
-    container_name: estag-flix
+    container_name: estagflix
     ports:
       - 81:80
     volumes:
     - type: bind
       source: .
-      target: /usr/local/apache2/htdocs/estag-flix
+      target: /usr/local/apache2/htdocs/estagflix
