--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - 81:80
     volumes:
-    - type: bind
-      source: .
-      target: /usr/local/apache2/htdocs/estagflix
+      .:/usr/local/apache2/htdocs/estagflix
+    #- type: bind
+    #  source: .
+    #  target: /usr/local/apache2/htdocs/estagflix
